test/fail/vt_alt01.v3
//@execute = false
type X {
	case None;
	case IsY(y: Y);
}
type Y {
	case None;
	case IsX(x: X);
}
def main() -> bool {
	def xn = X.None, yn = Y.None;
	def xy = X.IsY(yn), yx = Y.IsX(xn);
	return xn == xy || yn == yx;
}
